# deepdoc_vietocr

./: Agents.md  full_pipeline.py  pyproject.toml
deepdoc_utils/: settings.py
deepdoc_vietocr/: 130628 254 CBDK cu nhan su du tuyen vao cac vi tri chu chottrong NSRP giai doan II.pdf_3.jpg_full.md  full_pipeline.py  full_pipeline_v2.py
deepdoc_vietocr/deepdoc_utils/: file_utils.py  settings.py
deepdoc_vietocr/deepdoc_utils/db/: __init__.py
deepdoc_vietocr/module/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  table_structure_recognizer.py
module/: layout_recognizer.py  table_structure_recognizer.py
